--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div class="content">
         <span class="hi"> hi there... </span>
         <h3> i am <span> anandhu </span> </h3>
-        <p class="info"> i am a visual desiner </p>
+        <p class="info"> i am a visual designer </p>
         <p class="text"> A visual designer designs for a variety of platforms, which may include Internet and intranet sites, games, movies, kiosks and wearables. In short, they create the concepts, artwork and layouts for digital projects based on creative briefs and client meeting </p>
         <a href="#about" class="btn">about me</a>
     </div>
